--- a/pebble/appinfo.json
+++ b/pebble/appinfo.json
@@ -7,7 +7,7 @@
   "sdkVersion": "3",
   "targetPlatforms": ["aplite", "basalt"],
   "watchapp": {
-    "watchface": false
+    "watchface": true
   },
   "appKeys": {
     "KEY_AMOUNT": 0,
