--- a/pebble/appinfo.json
+++ b/pebble/appinfo.json
@@ -1,7 +1,7 @@
 {
   "uuid": "63004266-054c-458e-9b11-c0a6a8d3fdee",
-  "shortName": "you-got-paid",
-  "longName": "You Got Paid",
+  "shortName": "You Got Paid!",
+  "longName": "You Got Paid!",
   "companyName": "GoCardless",
   "versionLabel": "1.0",
   "sdkVersion": "3",
